--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" style="font-family:'Times New Roman'">
+<html lang="en" style="font-family:'Times New Roman'" >
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>♎Tushar's Personal site</title>
+    <title>Tushar's Personal site</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
         </tr>
     </table>
 
-    <hr size="4" color="grey" noshade>
+    <hr>
     <h3>Education</h3>
     <ul>
         <li>Ashlane Primary School</li>
