--- a/contactme.html
+++ b/contactme.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
