--- a/index.html
+++ b/index.html
@@ -1,83 +1,75 @@
 <!DOCTYPE html>
-<html lang="en" style="font-family:'Times New Roman'" >
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tushar's Personal site</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <meta charset="UTF-8">
+    <title>Tushar</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    <table cellspacing="20">
-        <tr>
-            <td><img src="images/1025520.png" width="225" height="200" alt="tushar logo"></td>
-            <td>
-                <h1>Tushar Suryavanshi</h1>
-                <p><em><strong>Developer</strong> in the making.</em></p>
-                <p>BE in Comp Engg. 4 years exp in IT. I love <strong><a
-                            href="https://myanimelist.net/">Anime❤️</strong></a> and
-                    playing games and sometimes code.</p>
-            </td>
-        </tr>
-    </table>
+    <div class="top-container">
+        <img class="cloud1" src="images/cloud.png" alt="cloud-img">
+        <h1>Tushar</h1>
+        <h2 class="h2pro">A <span class="pro">pro</span>grammer.</h2>
+        <!--
+        <p class="first-p">Hello</p>
+        <p class="second-p">World</p>
+        <span class="Hello">Hello</span>
+        <span class="World">World</span>
+        -->
+        <img class="cloud2" src="images/cloud.png" alt="cloud-img">
+        <img src="images/mountain.png" alt="mountain-img">
+    </div>
 
-    <hr>
-    <h3>Education</h3>
-    <ul>
-        <li>Ashlane Primary School</li>
-        <li>CWC Secondary High School</li>
-        <li>Rizvi Junior College</li>
-        <li>Rizvi Engineering College</li>
-        <ul>
-            <li>Seed SCTS</li>
-        </ul>
-    </ul>
-    <hr>
-    <h3>Work Experience</h3>
-    <table cellspacing=10>
-        <thead>
-            <tr>
-                <th>Year</th>
-                <th>Firm</th>
-                <th>Position</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>2014</td>
-                <td>Agilysis</td>
-                <td>Network Dept</td>
-            </tr>
-            <tr>
-                <td>2015-2019</td>
-                <td>Intelliswift Pvt Ltd</td>
-                <td>Software Engg</td>
-            </tr>
-        </tbody>
-        <tfoot></tfoot>
-    </table>
-    <hr>
-    <h3>Skills</h3>
-    <table cellspacing=10>
-        <tr>
-            <td>PERL</td>
-            <td>⭐⭐⭐</td>
-        </tr>
-        <tr>
-            <td>Java</td>
-            <td>⭐⭐</td>
-        </tr>
-        <tr>
-            <td>Python</td>
-            <td>⭐</td>
-        </tr>
-    </table>
-    <br>
-    <hr>
-    <br>
-    <a href="hobbies.html">My Hobbies</a>
-    <a href="contactme.html">Contact Me</a>
+    <div class="middle-container">
+        <div class="profile">
+            <img src="https://www.flaticon.com/svg/static/icons/svg/560/560216.svg" alt="tushar logo" width="242" height="220">
+            <h2>Hello.</h2>
+            <p>I am Software Engineer. Developer in the making. I ❤️ Anime.</p>
+        </div>
+        <hr>
+        <div class="skills">
+            <h2>My Skills.</h2>
+            <div class="skill-row">
+                <img class="skill1" src="https://media.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif" alt="" width="242" height="220">
+                <h3>Design & Development</h3>
+                <p class="para1">Started to learn coding while completing graduation. Had acute sense of learning and fixing anything which was broken which helped me in coding.On my way to become full fledged web developer.</p>
+            </div>
+
+            <div class="skill-row">
+                <img class="skill2" src="https://www.flaticon.com/premium-icon/icons/svg/2314/2314736.svg" alt="" width="242" height="220">
+                <h3>Another Skill</h3>
+                <p class="para2">Another skill which I have is, can binge watch any anime and eat food.Pizza and Biryanis can go with anything.</p>
+            </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+            <p class="contactp">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+            <br>
+            <a class="btn" href="mailto:tushar.suryavanshi2991@gmail.com">CONTACT ME</a>
+        </div>
+    </div>
+    <div class="bottom-container">
+        <a class="footer-link1" href="#">LinkedIn</a>
+        <a class="footer-link2" href="https://twitter.com/scizor_29">Twitter</a>
+        <a class="footer-link3" href="#">Website</a>
+        <p class="last">© 2020 Tushar Suryavanshi.</p>
+    </div>
+
+    <!--
+    <div class="parent">
+        <div class="red"></div>
+        <div class="blue"></div>
+        <div class="yellow"></div>
+    </div>
+-->
+
 </body>
 
 </html>
